--- a/RegisterDlg.ui
+++ b/RegisterDlg.ui
@@ -34,6 +34,12 @@
      <height>400</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
    <property name="text">
     <string/>
    </property>
@@ -44,38 +50,38 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLineEdit" name="AccountEdit">
+  <widget class="QLineEdit" name="UsernameEdit">
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>130</y>
+     <y>60</y>
      <width>250</width>
-     <height>30</height>
+     <height>25</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>华文楷体</family>
-     <pointsize>13</pointsize>
+     <pointsize>12</pointsize>
     </font>
    </property>
    <property name="placeholderText">
-    <string>请输入账号</string>
+    <string>请输入用户名</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="PasswordEdit">
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>190</y>
+     <y>100</y>
      <width>250</width>
-     <height>30</height>
+     <height>25</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>华文楷体</family>
-     <pointsize>13</pointsize>
+     <pointsize>12</pointsize>
     </font>
    </property>
    <property name="echoMode">
@@ -89,15 +95,15 @@
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>250</y>
+     <y>140</y>
      <width>250</width>
-     <height>30</height>
+     <height>25</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>华文楷体</family>
-     <pointsize>13</pointsize>
+     <pointsize>12</pointsize>
     </font>
    </property>
    <property name="echoMode">
@@ -110,8 +116,8 @@
   <widget class="QPushButton" name="regBtn">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>310</y>
+     <x>150</x>
+     <y>340</y>
      <width>90</width>
      <height>36</height>
     </rect>
@@ -138,7 +144,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>310</y>
+     <y>340</y>
      <width>90</width>
      <height>36</height>
     </rect>
@@ -165,8 +171,8 @@
    <property name="geometry">
     <rect>
      <x>230</x>
-     <y>70</y>
-     <width>111</width>
+     <y>10</y>
+     <width>110</width>
      <height>40</height>
     </rect>
    </property>
@@ -184,7 +190,7 @@
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>70</y>
+     <y>10</y>
      <width>40</width>
      <height>40</height>
     </rect>
@@ -199,61 +205,213 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="accountLabel">
+  <widget class="QLabel" name="usernameLabel">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>125</y>
-     <width>40</width>
-     <height>40</height>
+     <x>97</x>
+     <y>62</y>
+     <width>60</width>
+     <height>20</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
    <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap resource="figures.qrc">:/img/source/figures/account.png</pixmap>
-   </property>
-   <property name="scaledContents">
-    <bool>true</bool>
+    <string>用户名：</string>
    </property>
   </widget>
-  <widget class="QLabel" name="passwordLabel">
+  <widget class="QLabel" name="passwordlabel">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>185</y>
-     <width>40</width>
-     <height>40</height>
+     <x>105</x>
+     <y>102</y>
+     <width>50</width>
+     <height>20</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
    <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap resource="figures.qrc">:/img/source/figures/password.png</pixmap>
-   </property>
-   <property name="scaledContents">
-    <bool>true</bool>
+    <string>密  码：</string>
    </property>
   </widget>
-  <widget class="QLabel" name="repasswordLabel">
+  <widget class="QLabel" name="repasswordlabel">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>245</y>
-     <width>40</width>
-     <height>40</height>
+     <x>80</x>
+     <y>142</y>
+     <width>80</width>
+     <height>20</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
    <property name="text">
-    <string/>
+    <string>确认密码：</string>
    </property>
-   <property name="pixmap">
-    <pixmap resource="figures.qrc">:/img/source/figures/repassword.png</pixmap>
+  </widget>
+  <widget class="QLineEdit" name="RealnameEdit">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>260</y>
+     <width>250</width>
+     <height>25</height>
+    </rect>
    </property>
-   <property name="scaledContents">
-    <bool>true</bool>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="placeholderText">
+    <string>请输入真实姓名</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="realnameLabel">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>262</y>
+     <width>80</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>真实姓名：</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="idcardLabel">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>302</y>
+     <width>80</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>身份证号：</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="phoneLabel">
+   <property name="geometry">
+    <rect>
+     <x>97</x>
+     <y>182</y>
+     <width>60</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>手机号：</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="emailLabel">
+   <property name="geometry">
+    <rect>
+     <x>105</x>
+     <y>222</y>
+     <width>50</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>邮  箱：</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="IdcardEdit">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>300</y>
+     <width>250</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="placeholderText">
+    <string>请输入身份证号</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="PhoneEdit">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>180</y>
+     <width>250</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="placeholderText">
+    <string>请输入手机号</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="EmailEdit">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>220</y>
+     <width>250</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="placeholderText">
+    <string>请输入邮箱</string>
    </property>
   </widget>
  </widget>
