--- a/UserMainWindow.ui
+++ b/UserMainWindow.ui
@@ -262,7 +262,7 @@
      </font>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="page_1">
      <widget class="QFrame" name="flightsearch">
@@ -1233,7 +1233,7 @@ border: none; /* 移除边框 */</string>
         <set>Qt::AlignmentFlag::AlignCenter</set>
        </property>
       </widget>
-      <widget class="QLabel" name="yearLabel_2">
+      <widget class="QLabel" name="dayLabel">
        <property name="geometry">
         <rect>
          <x>370</x>
@@ -2082,7 +2082,7 @@ border: none; /* 移除边框 */</string>
        <rect>
         <x>430</x>
         <y>235</y>
-        <width>150</width>
+        <width>181</width>
         <height>20</height>
        </rect>
       </property>
@@ -2248,7 +2248,7 @@ border: none; /* 移除边框 */</string>
        <rect>
         <x>430</x>
         <y>185</y>
-        <width>150</width>
+        <width>181</width>
         <height>20</height>
        </rect>
       </property>
@@ -2286,7 +2286,7 @@ border: none; /* 移除边框 */</string>
        <rect>
         <x>430</x>
         <y>285</y>
-        <width>150</width>
+        <width>181</width>
         <height>20</height>
        </rect>
       </property>
