--- a/UserMainWindow.ui
+++ b/UserMainWindow.ui
@@ -1832,20 +1832,14 @@ border: none; /* 移除边框 */</string>
        </property>
       </widget>
      </widget>
-     <widget class="QScrollArea" name="scrollArea">
+     <widget class="QScrollArea" name="scrollArea_1">
       <property name="geometry">
        <rect>
-        <x>9</x>
-        <y>189</y>
-        <width>631</width>
-        <height>351</height>
+        <x>10</x>
+        <y>190</y>
+        <width>630</width>
+        <height>350</height>
        </rect>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>631</width>
-        <height>351</height>
-       </size>
       </property>
       <property name="frameShape">
        <enum>QFrame::Shape::Panel</enum>
@@ -1864,7 +1858,7 @@ border: none; /* 移除边框 */</string>
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>612</width>
+         <width>611</width>
          <height>600</height>
         </rect>
        </property>
@@ -1884,24 +1878,49 @@ border: none; /* 移除边框 */</string>
      </widget>
     </widget>
     <widget class="QWidget" name="page_2">
-     <widget class="QLabel" name="label_2">
+     <widget class="QScrollArea" name="scrollArea_2">
       <property name="geometry">
        <rect>
-        <x>290</x>
-        <y>80</y>
-        <width>80</width>
-        <height>50</height>
+        <x>10</x>
+        <y>30</y>
+        <width>630</width>
+        <height>500</height>
        </rect>
       </property>
-      <property name="font">
-       <font>
-        <family>华文楷体</family>
-        <pointsize>18</pointsize>
-       </font>
+      <property name="frameShape">
+       <enum>QFrame::Shape::Panel</enum>
       </property>
-      <property name="text">
-       <string>Page 2</string>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOn</enum>
       </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="widgetResizable">
+       <bool>true</bool>
+      </property>
+      <widget class="QWidget" name="scrollAreaWidgetContents_2">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>611</width>
+         <height>600</height>
+        </rect>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>600</height>
+        </size>
+       </property>
+      </widget>
      </widget>
     </widget>
     <widget class="QWidget" name="page_3">
